--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-textarea-autosize": "^7.1.0",
     "react-toastify": "^5.0.0",
     "react-tooltip": "^3.10.0",
-    "typescript": "^3.4.5"
+    "typescript": "^3.4.5",
+    "fstream": "^1.0.12"
   },
   "scripts": {
     "start": "react-scripts start",
